--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <header>
+            <img class="img-foto" src="img/Francisco - RA- 1709477.jpg" alt="Foto do perfil de Francsico">
             <h1>Francisco Rabelo</h1>
         </header>
         <section>
@@ -16,9 +17,25 @@
             <article>
                 <header>
                     <h3>Post #1</h3>
+                    <img class="img-post" src="img/postagem-1.jpg" alt="Editor de texto contendo código HTML">
                 </header>
+                <p>
+                    "Lorem ipsum dolor sit amet, <a href="https://www.linkedin.com/in/francisco-mendes-62737148/" target="_blank">adipiscing </a>  elit, sed do eiusmod tempor <a href="mailto:francsico@email.com">ut labore</a> ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                </p>
             </article>
         </section>
-        <footer></footer>
+        <footer>
+            <ul>
+                <li>
+                    <a href="mailto" target="_blank">francisco@rabelo.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/francisco-mendes-62737148/" target="_blank">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://github.com/erimendes" target="_blank">GitHub</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
